Alps: Fix header title on mobile

--- a/projects/alps/css/style.css
+++ b/projects/alps/css/style.css
@@ -348,6 +348,10 @@ h2 {
 		font-size: 1.2rem;
     }
     
+    .header-title {
+        margin-top: 160px;
+    }
+
     .button-main {
         font-size: 1.1rem;
         margin-top: 15px;
